# synth

./: .env.example  .gitignore  AUDIO_ENGINE_STATUS.md  AUDIO_FIX_GUIDE.md  BACKEND_SETUP.md  CMakeLists.txt  CURRENT_STATUS.md  DEPLOY.md  FEATURE_STATUS.md  FILE_MANAGEMENT_GUIDE.md  INTEGRATION_COMPLETE.md  OPTIMIZATION_IDEAS.md  PERFORMANCE_GUIDE.md  PERFORMANCE_SYNTH_GUIDE.md  POLYPHONY_TEST.md  PRESET_IMPLEMENTATION_SUMMARY.md  PRESET_QUICK_START.md  PRESET_SYSTEM.md  PROJECT_FORMAT.md  PROJECT_MANAGEMENT_SUMMARY.md  README.md  REFACTOR_PLAN.md  SYNTH_GUI_PLAN.md  WELCOME.md  advanced-engine.js  audio_checklist_test  auth.js  build.sh  index.html  main.c  main_with_audio.c  midi_input.c  midi_input.h  midi_shim.c  midi_shim.h  nuklear_config.h  nuklear_impl.c  package.json  param_queue.c  param_queue.h  (+33 more)
api/: init-db.js
api/auth/: login.js  signup.js  verify.js
include/: params.h
lib/: auth.js
tests/: README.md  audio_checklist_test.c  param_queue_test.c  sample_io_test.c
ui/: draw_helpers.c  draw_helpers.h  knob_custom.c  knob_custom.h  style.c  style.h
